Fix h3 top white space in baseline style
`margin-top: 0` must not applied in baseline style.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -54,7 +54,9 @@ p {
 }
 
 h3 + p {
-	margin-top: 0;
+	--margin-top: 0;
+
+	margin-top: var(--margin-top);
 }
 
 pre + p,
